# Wake-On-Lan_ESP32_Zephyr

./: CMakeLists.txt  README.md  prj.conf
board/: esp32c3_supermini.overlay
boards/: esp32_devkitc_procpu.overlay  esp32c3_supermini.overlay
inc/: button.h  display.h  notify.h  portal.h  portal_html.h  shared.h  storage.h  wifi.h
src/: button.c  display.c  main.c  notify.c  portal.c  storage.c  szczys.c  wifi.c  zephyr.c
src/fonts/: lv_font_wol.h  lv_font_wol_14.c  lv_font_wol_24.c
